CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(latex_model NONE)

SET(LATEX_COMPILER_FLAGS "-interaction=nonstopmode --enable-write18" CACHE STRING "Flags passed to latex.")

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
INCLUDE(${CMAKE_MODULE_PATH}/UseLATEX.cmake)

SET(IMAGE_DIR "images")
SET(ALL_SVG_FILES)

ADD_SUBDIRECTORY(${IMAGE_DIR})

ADD_LATEX_DOCUMENT(report.tex IMAGE_DIRS ${IMAGE_DIR} DEFAULT_PDF MANGLE_TARGET_NAMES)

ADD_LATEX_DOCUMENT(presentation.tex IMAGE_DIRS ${IMAGE_DIR} DEFAULT_PDF MANGLE_TARGET_NAMES)
