CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(msc_thesis NONE)

SET(LATEX_COMPILER_FLAGS "-interaction=nonstopmode --enable-write18" CACHE STRING "Flags passed to latex.")

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
INCLUDE(${CMAKE_MODULE_PATH}/UseLATEX.cmake)

SET(REPORT_INPUTS
  report.tex
  )

SET(PRESENTATION_INPUTS
  presentation.tex
  )

SET(IMAGE_DIR "images")
SET(ALL_SVG_FILES)

ADD_SUBDIRECTORY(${IMAGE_DIR})

ADD_LATEX_DOCUMENT(en-report.tex INPUTS ${REPORT_INPUTS} IMAGE_DIRS ${IMAGE_DIR} DEFAULT_PDF MANGLE_TARGET_NAMES)
ADD_LATEX_DOCUMENT(fr-report.tex INPUTS ${REPORT_INPUTS} IMAGE_DIRS ${IMAGE_DIR} DEFAULT_PDF MANGLE_TARGET_NAMES)

ADD_LATEX_DOCUMENT(en-presentation.tex INPUTS ${PRESENTATION_INPUTS} IMAGE_DIRS ${IMAGE_DIR} DEFAULT_PDF MANGLE_TARGET_NAMES)
ADD_LATEX_DOCUMENT(fr-presentation.tex INPUTS ${PRESENTATION_INPUTS} IMAGE_DIRS ${IMAGE_DIR} DEFAULT_PDF MANGLE_TARGET_NAMES)
